--- a/style.css
+++ b/style.css
@@ -9,3 +9,8 @@ body {
     justify-content: left;
     grid-column-start: 40%;
 }
+
+ul {
+    text-align: center;
+    list-style-position: inside;
+}
